Relocation of InfinityLib internals, remake of main class and added new oscillators from aquacore

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -26,6 +26,9 @@ quarry-options:
 
   # The chance (0 to 1) of an oscillator activating each time a material would be produced
   oscillators:
+    coal: .5
+    iron: .5
+    gold: .5
     lapis: .5
     diamond: .5
     redstone: .5
