--- a/lombok.config
+++ b/lombok.config
@@ -2,7 +2,7 @@
 config.stopbubbling = true
 
 # Removes getter prefixes
-lombok.accessors.fluent = true
+lombok.accessors.fluent = false
 
 # Chain setters
 lombok.accessors.chain = true
